tests/semantic/valid/additive_expression.c
/*
 * Multi-line comment.
 */

#include <stdio.h>
#include <stdint.h>

4+5;
4+5+6;
