tests/semantic/invalid/variable_already_defined.c
/*
 * Multi-line comment.
 */

#include <stdint.h>
#include <stdio.h>

int32_t a = 0;
int64_t a;
